force-app/main/default/objects/medicines__c/medicines__c.object-meta.xml
<CustomObject>
    <label>medicines</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>medicines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>