force-app/main/default/objects/medicines__c/fields/generic__c.field-meta.xml
<CustomField>
    <fullName>generic__c</fullName>
    <label>generic</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>