force-app/main/default/objects/medicines__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>