force-app/main/default/objects/medicines__c/fields/prefix__c.field-meta.xml
<CustomField>
    <fullName>prefix__c</fullName>
    <label>prefix</label>
    <type>TextArea</type>
</CustomField>